# chipbox

./: .gitignore  .gitmodules  .taurignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  Trunk.toml  bacon.toml  chipbox-dev.toml  dev.nu  index.html  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
backend/: Cargo.toml  build.rs  tauri.conf.json
backend-bin/: Cargo.toml
backend-bin/src/: main.rs
backend-lib/: Cargo.toml
backend-lib/src/: lib.rs  path.rs  state.rs
backend-lib/src/state/: editor.rs  settings.rs  welcome.rs
backend-lib/src/state/editor/: project.rs
backend-lib/src/state/settings/: project_management.rs
backend-lib/src/state/settings/project_management/: tree_location.rs
backend-lib/src/state/welcome/: project_tree.rs
backend/capabilities/: default.json
backend/lib/: Cargo.toml
backend/lib/src/: app_data.rs  configured_state.rs  dir.rs  editor.rs  error.rs  lib.rs  project_selection.rs  settings.rs  setup.rs
backend/lib/src/app_data/: app_state.rs  msg.rs
backend/lib/src/app_data/app_state/: edit_state.rs
backend/lib/src/app_data/msg/: request.rs
backend/lib/src/editor/: audio_engine.rs
backend/lib/src/error/: io.rs  serde.rs
backend/src/: app_state.rs  app_thread.rs  lib.rs  main.rs  path.rs  paths.rs  tauri_run.rs  tracing_layers.rs  tracing_setup.rs
backend/src/app_state/: app_home.rs  editor.rs  first_time_setup.rs  settings.rs
backend/src/app_state/app_home/: project_tree.rs
backend/src/app_state/editor/: project.rs
backend/src/app_state/settings/: project_tree_location.rs
backend/src/editor/: audio_engine.rs
backend/src/editor/audio_engine/: error.rs  stream_config.rs
backend/src/paths/: data.rs  log.rs  settings.rs
chipbox/: Cargo.toml
chipbox-dev/: Cargo.toml
chipbox-dev-old/: Cargo.toml
chipbox-dev-old/src/: main.rs  signature.rs  tracing_util.rs  watch.rs
chipbox-dev/src/: cargo_util.rs  cli.rs  config.rs  lib.rs  main.rs  quit.rs  tracing_util.rs  watch.rs
chipbox-synth/: Cargo.toml
chipbox-synth/examples/: example.rs
chipbox-synth/src/: block.rs  frame.rs  graph.rs  lib.rs  synth.rs  timestamp.rs
chipbox-synth/src/block/: stereo.rs
chipbox-synth/src/frame/: mono.rs  stereo.rs
chipbox-synth/src/graph/: cmd.rs  data.rs  edge.rs  index.rs  node.rs  op.rs
chipbox-synth/src/graph/cmd/: conn.rs
chipbox-synth/src/synth/: cmd.rs
chipbox-synth/src/synth/cmd/: conn.rs  custom.rs  graph_input.rs  graph_output.rs
chipbox/src/: app.rs  hot.rs  lib.rs  main.rs
chipbox/src/app/: render_window.rs
chipbox/src/hot/: observer.rs
chipnertkj-ui-render/: Cargo.toml
chipnertkj-ui-render/src/: lib.rs  renderer.rs
common/: Cargo.toml
common/src/: app.rs  css.rs  error.rs  lib.rs  project.rs  project_meta.rs  settings.rs
common/src/app/: msg.rs
common/src/app/msg/: cmd.rs  request.rs
common/src/css/: color.rs
common/src/error/: fs.rs
common/src/project/: any.rs  channels.rs  meta.rs  v1.rs
common/src/project/channels/: synth.rs
common/src/project/meta/: version.rs
common/src/project/v1/: cmd.rs  song.rs
common/src/project/v1/song/: beat.rs  (+2 more)
common/src/settings/: audio_engine.rs  theme.rs
common/src/settings/theme/: color.rs  dimension.rs  font_families.rs  font_weight.rs  global.rs  themes.rs  user.rs
crates/chipbox/: Cargo.toml
crates/chipbox-audio/: Cargo.toml
crates/chipbox-build/: Cargo.toml
crates/chipbox-build/src/: build_script.rs  fs.rs  lib.rs  lockfile.rs
crates/chipbox-dsp/: Cargo.toml
crates/chipbox-js/: Cargo.toml  build.rs
crates/chipbox-js/src/: display.rs  exception.rs  hmr.rs  lib.rs  modules.rs  repl.rs  runtime.rs
crates/chipbox-js/src/hmr/: payload.rs  task.rs
crates/chipbox-js/src/modules/: tracing.rs
crates/chipbox-js/src/runtime/: vite.rs
crates/chipbox-portaudio/: Cargo.toml
crates/chipbox-portaudio-sys/: Cargo.toml  asio.rs  build.rs
crates/chipbox-portaudio/src/: error.rs  instance.rs  lib.rs
crates/chipbox-render/: Cargo.toml  build.rs
crates/chipbox-scene/: Cargo.toml  build.rs
crates/chipbox-scene/src/: element.rs  lib.rs  main.rs
crates/chipbox-scene/src/element/: behavior.rs  content.rs  layout.rs
crates/chipbox/examples/: js_repl.rs
crates/chipbox/src/: init.rs  js.rs  lib.rs  main.rs
crates/chipbox/src/js/: display.rs  exception.rs  modules.rs  repl.rs  runtime.rs
crates/chipbox/src/old/: js.rs
crates/xtask/: Cargo.toml  build.rs
crates/xtask/src/: app.rs  build.rs  command.rs  dev.rs  fs.rs  logger.rs  main.rs  portaudio.rs  program.rs  tui.rs
crates/xtask/src/app/: pane.rs
crates/xtask/src/command/: child.rs
crates/xtask/src/logger/: parse.rs  partial.rs
crates/xtask/src/program/: display.rs  task.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs  tracing_layers.rs
frontend/src/app/: editor.rs  home.rs  title_bar.rs  wizard.rs
frontend/src/app/editor/: state.rs
frontend/src/app/title_bar/: button.rs
frontend/src/tauri_api/: window.rs
frontend/style/: main.css
frontend/style.old/: _app.scss  _scaled-px.scss  _title-bar.scss  main.scss
frontend/style.old/app/: _container.scss  _home.scss
frontend/style/stylesheets/: main.scss
frontend/style/stylesheets/abstracts/: _functions.scss  _mixins.scss  _variables.scss
frontend/style/stylesheets/base/: _base.scss  _fonts.scss  _helpers.scss  _typography.scss
frontend/style/stylesheets/components/: _title-bar.scss
frontend/style/stylesheets/themes/: _default.scss
frontend/style/stylesheets/vendors/: _normalize.scss
glue/: Cargo.toml
glue/src/: app.rs  cmd.rs  handler.rs  invoke.rs  lib.rs  load_project.rs  loaded_project.rs  msg.rs  set_settings.rs  skip_setup.rs  state.rs  tauri_api.rs
glue/src/app/: editor.rs  home.rs  querying_backend.rs  setup.rs
glue/src/cmd/: create_project.rs  loaded_project.rs
glue/src/invoke/: infallible.rs
glue/src/tauri_api/: core.rs
src-backend/: Cargo.toml  tauri.conf.json
src-backend/src/: main.rs
ui/app/: Cargo.toml
ui/app/src/: app.rs  lib.rs
ui/app/src/app/: backend_query.rs  editor.rs  home.rs  querying_backend.rs  setup.rs  state.rs
(+219 files in other folders)
