[workspace]
members = [
    "crates/chipbox",
    "crates/chipbox-portaudio",
    "crates/chipbox-portaudio-sys",
    "crates/chipbox-audio",
    "crates/chipbox-build",
    "crates/chipbox-dsp",
    "crates/chipbox-render",
    "crates/chipbox-scene",
    "crates/xtask",
]
resolver = "3"

[workspace.lints.clippy.nursery]
level = "warn"
priority = -1

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.lints.clippy.unwrap_used]
level = "deny"
priority = 0

[workspace.lints.clippy.undocumented_unsafe_blocks]
level = "deny"
priority = 0

[workspace.lints.rust.deprecated_safe_2024]
level = "deny"
priority = 0

[workspace.lints.rust.future_incompatible]
level = "deny"
priority = 0

[workspace.lints.rust.nonstandard_style]
level = "deny"
priority = 0

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
