[package]
name = "chipbox-backend-bin"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive", "unstable"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tauri-plugin-window-state = "0.1"
tokio = { version = "1.29", features = ["macros", "fs", "tracing", "time"] }
color-eyre = "0.6"
chipbox-glue = { path = "../glue", features = ["backend"] }
chipbox-backend-lib = { path = "../backend-lib" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
