[package]
name = "chipbox-backend-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = ["shell-open"], optional = true }
serde = { version = "1.0", features = ["derive", "unstable"] }
serde_json = "1.0"
tracing = "0.1"
home = { version = "0.5", optional = true }
tokio = { version = "1.29", features = ["macros", "time"], optional = true }
tokio-stream = { version = "0.1", features = ["fs"], optional = true }
const_format = { version = "0.2", features = ["nightly_const_generics"] }
parking_lot = { version = "0.12", features = ["nightly"] }
color-eyre = "0.6"

[features]

backend = [
    "dep:home",
    "dep:tokio",
    "dep:tauri",
    "dep:tokio-stream",
    "tokio/fs",
    "tokio/tracing",
]

[dev-dependencies]
tempfile = "3.6"
