[package]
name = "chipbox"
version = "0.1.0"
edition = "2021"

# See https://v2.tauri.app/start/migrate/from-tauri-1/#preparing-for-mobile
# This is needed for mobile platforms compatibility.
[lib]
name = "chipbox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
chipbox-common = { workspace = true }
chipbox-glue = { workspace = true, features = ["backend"] }
tauri.workspace = true
tauri-plugin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
home.workspace = true
tokio.workspace = true
fs4.workspace = true
delegate.workspace = true
