[package]
name = "chipbox-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
chipbox-utils = { path = "../chipbox-utils" }
miette = { version = "7.5.0", features = ["fancy"] }
ratatui = "0.29.0"
clap = { version = "4.5.29", features = ["derive"] }
tokio = { version = "1.43.1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
derive_more = { version = "2.0.1", features = ["display"] }
notify = "8.0.0"
toml = { version = "0.8.20", features = ["preserve_order"] }
syn = { version = "2.0.98", features = ["full"] }
relative-path = "1.9.3"
