[package]
name = "chipbox-synth"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
cpal = { version = "0.15.3", features = ["asio"] }
eframe = "0.30.0"

[dependencies]
delegate = "0.13.1"
derive_more = { version = "1.0.0", features = [
    "display",
    "from",
    "into",
    "as_ref",
    "index",
    "index_mut",
    "mul",
    "mul_assign",
    "into_iterator",
    "debug",
] }
enum-as-inner = "0.6.1"
enum_delegate = "0.2.0"
num = "0.4.3"
petgraph = { version = "0.7.0", features = ["rayon"] }
rb = "0.4.1"
static_assertions = "1.1.0"
thiserror = "2.0.9"
