[package]
name = "chipbox-synth"
version = "0.1.0"
edition = "2024"

[dependencies]
delegate = "0.13.2"
derive_more = { version = "1.0.0", features = [
    "display",
    "from",
    "into",
    "as_ref",
    "index",
    "index_mut",
    "mul",
    "mul_assign",
    "into_iterator",
    "debug",
] }
enum-as-inner = "0.6.1"
enum_delegate = "0.2.0"
num = "0.4.3"
petgraph = { version = "0.7.1", features = ["rayon"] }
slotmap = "1.0.7"
static_assertions = "1.1.0"
thiserror = "2.0.11"
rand = "0.8.5"
rb = "0.4.1"
