[package]
name = "chipbox"
version = "0.1.0"
edition = "2024"

[features]
# Disable hot-reloading. Use crate `chipbox-hot` directly instead.
not-hot = ["dep:chipbox-hot"]
# Enable hot-reloading. Reload crate `chipbox-hot` on changes.
hot = ["dep:hot-lib-reloader"]

[dependencies]
chipbox-utils = { path = "../chipbox-utils" }
chipbox-hot = { path = "../chipbox-hot", optional = true }
hot-lib-reloader = { version = "0.7.0", optional = true }
chipnertkj-ui-render = { path = "../chipnertkj-ui-render" }
chipnertkj-ui = { path = "../chipnertkj-ui" }
cpal = { version = "0.15.3", features = ["asio"] }
rb = "0.4.1"
const_format = { version = "0.2.34" }
winit = { version = "0.30.9", features = ["mint"] }
miette = { version = "7.5.0", features = ["fancy"] }
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "tracing",
    "sync",
] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "parking_lot",
] }
tracing = "0.1.41"
