[package]
name = "chipbox-glue"
version = "0.0.0"
edition = "2021"

[features]
backend = [
    # workspace deps
    "dep:chipbox-backend-lib",
    # deps
    "dep:tauri",
    "dep:tokio",
]
frontend = [
    # deps
    "dep:yew",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:wasm-timer",
    "dep:serde-wasm-bindgen",
    "dep:js-sys",
    "dep:web-sys",
    "dep:tauri-sys",
]

[dependencies]
## backend only deps
# workspace deps
chipbox-backend-lib = { workspace = true, optional = true }
# deps
tauri = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

## fronted only deps
# deps
yew = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
wasm-timer = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
tauri-sys = { workspace = true, optional = true }

## common deps
# workspace deps
chipbox-common = { workspace = true }
# deps
tracing = { workspace = true }
serde = { workspace = true }
