[package]
name = "chipbox-glue"
version = "0.1.0"
edition = "2021"

[features]
backend = [
    # deps
    "dep:tauri",
    "dep:tokio",
    "dep:parking_lot",
]
frontend = [
    # deps
    "dep:leptos",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-time",
    "dep:serde-wasm-bindgen",
]

[dependencies]
## backend only deps
# deps
tauri = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

## fronted only deps
# deps
leptos = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

## common deps
# deps
chipbox-common = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
