[package]
name = "chipbox-backend"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive", "unstable"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chipbox-common = { path = "../src-common" }
tauri-plugin-window-state = "0.1"
tokio = { version = "1.29.1", features = ["macros", "fs", "tracing", "time"] }
home = "0.5.5"
anyhow = "1.0.71"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
