[package]
name = "chipbox-backend-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
# workspace deps
chipbox-common = { path = "../../common" }
cpal = { git = "https://github.com/RustAudio/cpal", features = [
    "asio",
    "jack",
] }
# deps
home = { version = "0.5" }
serde = { version = "1.0" }
serde_json = "1.0"
tokio = { version = "1.29", features = ["macros", "fs", "tracing", "time"] }
