[package]
name = "chipbox-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
derive_more = { version = "2.1.0", features = [
    "debug",
    "display",
    "from",
    "try_into",
] }
ringbuf = "0.4.8"
thiserror = "2.0.17"
chipbox-portaudio = { path = "../chipbox-portaudio", features = ["asio"] }

[lints]
workspace = true
