[package]
name = "chipbox-audio"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = [
    "debug",
    "display",
    "from",
    "try_into",
] }
ringbuf = { workspace = true }
thiserror = { workspace = true }
chipbox-portaudio = { workspace = true, features = ["asio"] }

[build-dependencies]
chipbox-build = { workspace = true, features = ["build-script", "lockfile"] }

[lints]
workspace = true
