[package]
name = "chipbox-build"
version = "0.1.0"
edition = "2024"

[features]
build-script = []
lockfile = ["dep:cargo-lock"]
fs = ["dep:get_dir"]

[dependencies]
cargo-lock = { workspace = true, optional = true }
miette = { workspace = true, features = ["fancy"] }
get_dir = { workspace = true, optional = true }
thiserror = { workspace = true }
derive_more = { workspace = true, features = ["from", "into", "display"] }
dunce = { workspace = true }

[lints]
workspace = true
