[package]
name = "chipbox-dsp"
version = "0.1.0"
edition = "2024"

[dependencies]
delegate-match = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
rustc-hash = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
chipbox-build = { workspace = true, features = ["build-script", "lockfile"] }

[lints]
workspace = true
