[package]
name = "chipbox-js"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
reqwest = { workspace = true, features = ["stream", "blocking"] }
rquickjs = { workspace = true, features = ["futures", "loader", "macro"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
chipbox-build = { workspace = true, features = ["build-script", "lockfile"] }

[lints]
workspace = true
