[package]
name = "chipbox-portaudio-sys"
version = "0.1.0"
edition = "2024"

[features]
asio = ["dep:ureq", "dep:zip"]

[build-dependencies]
chipbox-build = { workspace = true, features = ["build-script", "fs"] }
cc = { workspace = true, features = ["parallel"] }
bindgen = { workspace = true }
cmake = { workspace = true }
ureq = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
