[package]
name = "chipbox-portaudio"
version = "0.1.0"
edition = "2024"

[features]
asio = ["chipbox-portaudio-sys/asio"]

[dependencies]
chipbox-portaudio-sys = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
chipbox-build = { workspace = true, features = ["build-script", "lockfile"] }

[lints]
workspace = true
