[package]
name = "chipbox-render"
version = "0.1.0"
edition = "2024"

[dependencies]
chipbox-scene = { workspace = true }
tracing = { workspace = true }
vello = { workspace = true }
wgpu = { workspace = true, features = ["serde"] }

[build-dependencies]
chipbox-build = { workspace = true, features = ["build-script", "lockfile"] }

[lints]
workspace = true
