[package]
name = "chipbox-scene"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
delegate-match = "0.2.0"
inventory = "0.3.21"
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
specta = { git = "https://github.com/specta-rs/specta", rev = "f41ac40", features = [
    "function",
    "nightly",
    "serde",
    "export",
    "derive",
] }
specta-typescript = { git = "https://github.com/specta-rs/specta", rev = "f41ac40", features = [
    "serde",
] }
thiserror = "2.0.17"

[build-dependencies]
chipbox-build = { path = "../chipbox-build", features = ["build-script", "fs"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
