[package]
name = "chipbox"
version = "0.1.0"
edition = "2024"

[dependencies]
chipbox-audio = { path = "../chipbox-audio" }
chipbox-dsp = { path = "../chipbox-dsp" }
chipbox-render = { path = "../chipbox-render" }
chipbox-scene = { path = "../chipbox-scene" }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
rquickjs = { version = "0.10.0", features = ["futures", "loader"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
tokio-tungstenite = "0.28.0"
serde_json = "1.0.146"
futures = "0.3.31"
reqwest = { version = "0.12.27", features = ["stream", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["from"] }
url = "2.5.7"
oneshot = "0.1.11"

[lints]
workspace = true
