[package]
name = "chipbox"
version = "0.1.0"
edition = "2024"

[dependencies]
chipbox-audio = { workspace = true }
chipbox-dsp = { workspace = true }
chipbox-js = { workspace = true }
chipbox-render = { workspace = true }
chipbox-scene = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
chipbox-build = { workspace = true, features = ["build-script", "lockfile"] }

[lints]
workspace = true
