[package]
name = "chipbox-ui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# ui
chipbox-ui-spinner = { workspace = true }
chipbox-ui-panel = { workspace = true }
# deps
chipbox-glue = { workspace = true }
chipbox-common = { workspace = true }
yew = { workspace = true }
tracing = { workspace = true }
const_format = { workspace = true }
