[package]
name = "chipbox-ui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
## project deps
chipbox-glue = { workspace = true }
chipbox-common = { workspace = true }
## ui deps
chipbox-ui-spinner = { workspace = true }
chipbox-ui-panel = { workspace = true }
## tracing
tracing = { workspace = true }
## utils
const_format = { workspace = true }
## wasm frontend
yew = { workspace = true }
web-sys = { workspace = true }
tauri-sys = { workspace = true }
